# rickandmorty_extraction

./: README.md
steamdb_to_bigquery/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  tox.ini
steamdb_to_bigquery/.github/: ISSUE_TEMPLATE.md
steamdb_to_bigquery/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
steamdb_to_bigquery/src/steamdb_to_bigquery/: __init__.py  characters.csv  characters.jsonl  main.py  rickandmorty.py
steamdb_to_bigquery/tests/: __init__.py  test_steamdb_to_bigquery.py
