[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steamdb_to_bigquery"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "sarah de oliveira", email = "sgeorgia0297@gmail.com"}
]
maintainers = [
  {name = "sarah de oliveira", email = "sgeorgia0297@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/srhgeorgia/steamdb_to_bigquery/issues"
changelog = "https://github.com/srhgeorgia/steamdb_to_bigquery/blob/master/changelog.md"
homepage = "https://github.com/srhgeorgia/steamdb_to_bigquery"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

